--- a/main.css
+++ b/main.css
@@ -92,3 +92,10 @@ a.link:visited {
     float: right;
     text-align: right;
 }
+
+.p_developer {
+    padding: 5px;
+    font-family: 'Courier New', Courier, monospace;
+    text-align: justify;
+    padding-left: 5px;   
+}
