--- a/main.css
+++ b/main.css
@@ -97,5 +97,5 @@ a.link:visited {
     padding: 5px;
     font-family: 'Courier New', Courier, monospace;
     text-align: justify;
-    padding-left: 5px;   
+    color: black;  
 }
