--- a/main.css
+++ b/main.css
@@ -81,6 +81,7 @@ a.link:visited {
     border-radius: 5px;
     width: 85px;
     height: 95px;
+    image-orientation: left;
     text-align: left;
     font-family: 'Courier New', Courier, monospace;
 }
@@ -89,6 +90,7 @@ a.link:visited {
     border-radius: 5px;
     width: 85px;
     height: 95px;
+    image-orientation: right;
     text-align: right;
     font-family: 'Courier New', Courier, monospace;
 }
