--- a/main.css
+++ b/main.css
@@ -81,6 +81,8 @@ a.link:visited {
     border-radius: 5px;
     width: 85px;
     height: 95px;
+    float: right;
     font-family: 'Courier New', Courier, monospace;
+    text-align: right;
 }
 
